0027510: Visualization, OpenGl_Window - do not ignore backing store resize on OS X